# t3

./: .gitignore  .travis.yml  Application.hs  Foundation.hs  README.md  Respond.hs  sources.txt  stack.yaml  t3-server.cabal
Handler/: Create.hs  Play.hs  Register.hs  Start.hs
T3/: Game.hs  Match.hs  Playback.hs  Server.hs  Service.hs  Session.hs  Web.hs
T3/Comm/: Class.hs  Game.hs  Types.hs
T3/Game/: Class.hs  Core.hs  Instance.hs  Types.hs
T3/Match/: Types.hs
T3/Server/: Dispatch.hs  Lobby.hs
T3/Service/: Dispatch.hs  Lobby.hs
T3/Session/: Types.hs
T3/Web/: Instance.hs
app/: devel.hs
config/: keter.yml  routes
t3-bot/: t3-bot.cabal
t3-bot/src/T3/Bot/: Random.hs
t3-client/: t3-client.cabal
t3-client/app/: Main.hs
t3-client/src/T3/: Client.hs
t3-core/: t3-core.cabal
t3-core/src/T3/: Core.hs
t3-core/test/Test/T3/: CoreSpec.hs
t3-game/: t3-game.cabal
t3-game-callbacks/: t3-game-callbacks.cabal
t3-game-callbacks/src/T3/GameCallbacks/: BoardManager.hs  BoardManagerImpl.hs  Classes.hs  Communicator.hs  CommunicatorImpl.hs  Console.hs  ConsoleImpl.hs  Control.hs  ControlImpl.hs  Finalizer.hs  HasActions.hs  HasTimeoutLimit.hs  Milliseconds.hs  Monad.hs  OnTimeout.hs  Parts.hs  Stoppable.hs  System.hs  Transmitter.hs  Types.hs
t3-game-console/: t3-game-console.cabal
t3-game-console/app/: Main.hs
t3-game-console/src/T3/GameConsole/: BoardManager.hs  BoardManagerImpl.hs  Classes.hs  Console.hs  ConsoleImpl.hs  Control.hs  ControlImpl.hs  GameImpl.hs  Monad.hs  Parts.hs  System.hs
t3-game-impl/: t3-game-impl.cabal
t3-game-impl/src/T3/GameImpl/: BoardManagerImpl.hs  CommunicatorImpl.hs  ConsoleImpl.hs  ControlImpl.hs  Milliseconds.hs  Parts.hs  System.hs  Types.hs
t3-game/src/T3/: Core.hs  Game.hs
t3-game/src/T3/Bot/: Random.hs
t3-game/src/T3/Game/: BoardManager.hs  BoardManagerImpl.hs  Class.hs  Classes.hs  Communicator.hs  CommunicatorImpl.hs  ConsoleImpl.hs  Control.hs  ControlImpl.hs  Core.hs  Game.hs  GameState.hs  HasBoard.hs  Instance.hs  Main.hs  Monad.hs  Parts.hs  Play.hs  PlayImpl.hs  Random.hs  Run.hs  System.hs  Types.hs
t3-game/src/T3/Game/Impl/: Console.hs
t3-game/test/T3/: CoreSpec.hs  GameSpec.hs
t3-game/test/Test/T3/Game/: CommunicatorSpec.hs  ControlSpec.hs  MainSpec.hs  PlaySpec.hs
t3-match/: t3-match.cabal
t3-match/src/T3/: Match.hs
t3-match/src/T3/Match/: BoardManagerImpl.hs  Communicator.hs  CommunicatorImpl.hs  Connection.hs  ConnectionCallback.hs  ConnectionCallbackImpl.hs  Console.hs  ConsoleImpl.hs  ControlImpl.hs  GameComm.hs  GameCommImpl.hs  GameImpl.hs  HasActions.hs  HasCallbacks.hs  HasConnection.hs  HasMatchState.hs  HasState.hs  HasTimeoutLimit.hs  Logger.hs  MatchInfo.hs  MatchLogger.hs  MatchLoggerImpl.hs  MatchTransmitter.hs  MatchTransmitterImpl.hs  Milliseconds.hs  OnTimeout.hs  Parts.hs  Stoppable.hs  System.hs  Transmitter.hs  Types.hs
t3-server/: Foundation.hs  stack.yaml  t3-server.cabal
t3-server-spock/: t3-server-spock.cabal
t3-server-spock/app/: Main.hs
t3-server-yesod/: .gitignore  Application.hs  Foundation.hs  t3-server-yesod.cabal
t3-server-yesod/Handler/: Home.hs  Instance.hs  Match.hs  Play.hs  Random.hs  Register.hs  RegisterPage.hs  Start.hs
t3-server-yesod/app/: devel.hs
t3-server-yesod/config/: routes  settings.yml
t3-server-yesod/templates/: homepage.hamlet  register.hamlet
t3-server-yesod/test/Handler/: RandomSpec.hs
t3-server/Handler/: Instance.hs  Start.hs
t3-server/T3/: Match.hs  Playback.hs  Server.hs
t3-server/T3/Server/: Dispatch.hs
t3-server/app/: Main.hs
t3-server/src/Control/Monad/Conc/: ClassTmp.hs
t3-server/src/T3/: DB.hs  Dispatch.hs  Http.hs  HttpImpl.hs  Lobby.hs  Match.hs  Part.hs  Playback.hs  Random.hs  Registrar.hs  RegistrarImpl.hs  Serve.hs  Server.hs  ServerImpl.hs  ServerLang.hs  Storage.hs  Util.hs  Web.hs  WebLang.hs
t3-server/src/T3/Dispatch/: Impl.hs
t3-server/src/T3/Http/: Impl.hs  Serve.hs
t3-server/src/T3/Lobby/: Impl.hs
t3-server/src/T3/Match/: Class.hs  Impl.hs  Types.hs
t3-server/src/T3/Match/Impl/: Conc.hs  MonadConc.hs
t3-server/src/T3/Part/: Impl.hs
t3-server/src/T3/Registrar/: Impl.hs
t3-server/src/T3/Server/: Arena.hs  ArenaDispatcher.hs  Class.hs  Connection.hs  ConnectionCallback.hs  ConnectionCallbackImpl.hs  Console.hs  ConsoleImpl.hs  Control.hs  Dispatch.hs  DispatchImpl.hs  Dispatcher.hs  Game.hs  GameComm.hs  GameCommImpl.hs  GameImpl.hs  GameInstance.hs  Gen.hs  HasCallbacks.hs  HasCallbacksImpl.hs  HasConnection.hs  HasConnectionImpl.hs  HasMatchState.hs  HasMatchStateImpl.hs  HasTimeoutLimit.hs  HasTimeoutLimitImpl.hs  Impl.hs  Lobby.hs  LobbyImpl.hs  Main.hs  Match.hs  MatchImpl.hs  MatchInfo.hs  MatchInfoImpl.hs  MatchInstance.hs  MatchInstanceImpl.hs  MatchLogger.hs  MatchLoggerImpl.hs  MatchManager.hs  MatchManagerImpl.hs  (+23 more)
t3-server/src/T3/Server/Control/: Lobby.hs  Monad.hs  Play.hs  PracticeLobby.hs  Register.hs  Result.hs  Start.hs  Types.hs
t3-server/src/T3/Server/Dispatch/: Class.hs  Impl.hs  Types.hs
t3-server/src/T3/Server/Dispatch/Impl/: Conc.hs  MonadConc.hs
t3-server/src/T3/Server/Game/: Impl.hs
t3-server/src/T3/Server/Impl/: Abstract.hs
t3-server/src/T3/Server/Lobby/: Class.hs  Impl.hs  Types.hs
t3-server/src/T3/Server/Lobby/Impl/: Conc.hs  MonadConc.hs
t3-server/src/T3/Server/Match/: Impl.hs
t3-server/src/T3/Server/MatchManager/: Impl.hs
t3-server/src/T3/Server/Part/: Class.hs  Impl.hs
t3-server/src/T3/Server/Part/Impl/: IO.hs
t3-server/src/T3/Server/Shared/: GameObject.hs  GamesObject.hs  LobbyObject.hs  RegistryObject.hs  ResultsObject.hs
t3-server/src/T3/Server/Storage/: JsonImpl.hs
t3-server/src/T3/Storage/: Class.hs  JsonImpl.hs  Types.hs
t3-server/src/T3/Storage/Impl/: Json.hs
t3-server/src/T3/Web/: Class.hs  Impl.hs  Types.hs
t3-server/src/T3/Web/Impl/: Server.hs
t3-server/test/T3/Http/: ImplSpec.hs
t3-server/test/T3/Server/Match/: ImplSpec.hs
t3-server/test/Test/T3/Server/: LobbyImplSpec.hs
test/Handler/: CreateSpec.hs  PlaySpec.hs  StartSpec.hs
