name: t3-bot
version: 0.1.0
synopsis: tic-tac-toe
description: Please see README.md
homepage: http://github.com/jxv/t3#readme
license: BSD3
license-file: LICENSE
author: Joe Vargas
maintainer: http://github.com/jxv
copyright: 2016 Joe Vargas
category: Game
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs:
    src
  exposed-modules:
    T3.Bot.Random
  build-depends:
      base >= 4.7 && < 5
    , containers
    , MonadRandom
    , t3-core
  default-language:
    Haskell2010

test-suite t3-game-test
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Spec.hs
  build-depends:
      base
    , t3-core
    , t3-bot
    , hspec
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  default-language:
    Haskell2010

source-repository head
  type:
    git
  location:
    https://github.com/jxv/t3
