name:
  t3-client
version:
  0.1.0.0
synopsis:
  Initial project template from stack
description:
  Please see README.md
homepage:
  http://github.com/jxv/t3#readme
license-file:
  LICENSE
author:
  Author name here
maintainer:
  example@example.com
copyright:
  2016 Author Here
category:
  Game
build-type:
  Simple
-- extra-source-files:
cabal-version:
  >=1.10

executable t3-client
    main-is:
      Main.hs
    hs-source-dirs:
      app
    build-depends:
        base
      , t3-client
    ghc-options:
      -threaded -rtsopts -with-rtsopts=-N

library
  hs-source-dirs:
    src
  exposed-modules:
    T3.Client
  build-depends:
      base >= 4.7 && < 5
    , aeson
    , text
    , bytestring
    , mtl
    , transformers
    , containers
    , lens
    , wreq
    , t3-game
    , t3-server
  default-language:
    Haskell2010

test-suite t3-client-test
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is: Spec.hs
  build-depends:
      base
    , t3-game
    , t3-server
    , hspec
    , aeson
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  default-language:
    Haskell2010

source-repository head
  type:
    git
  location:
    https://github.com/jxv/t3
