name: t3-game-callbacks
synopsis: tic-tac-toe game interfacing through callbacks
description:  Please see README.md
version: 0.1.0
cabal-version: >= 1.10
build-type: Simple
license: BSD3
license-file: LICENSE
author: Joe Vargas
maintainer: http://github.com/jxv
copyright: 2016 Joe Vargas
category: Game

library
  hs-source-dirs:
    src
  exposed-modules:
    T3.GameCallbacks.System
    T3.GameCallbacks.Types
    T3.GameCallbacks.Parts
    T3.GameCallbacks.Milliseconds
    T3.GameCallbacks.ControlImpl
    T3.GameCallbacks.BoardManagerImpl
    T3.GameCallbacks.CommunicatorImpl
    T3.GameCallbacks.ConsoleImpl
  default-extensions:
    OverloadedStrings
    MultiParamTypeClasses
    TypeFamilies
    GeneralizedNewtypeDeriving
    FlexibleContexts
    FlexibleInstances
    EmptyDataDecls
    TupleSections
    LambdaCase
  build-depends:
      base >= 4 && < 5
    , aeson
    , async-dejafu
    , dejafu
    , mtl
    , stm
    , text
    , transformers
    , t3-core
    , t3-game
  default-language:
    Haskell2010
