name: t3-game-callbacks
synopsis: tic-tac-toe game interfacing through callbacks
description:  Please see README.md
version: 0.1.0
cabal-version: >= 1.10
build-type: Simple
license: BSD3
license-file: LICENSE
author: Joe Vargas
maintainer: http://github.com/jxv
copyright: 2016 Joe Vargas
category: Game

library
  hs-source-dirs:
    src
  exposed-modules:
    T3.GameCallbacks.BoardManager
    T3.GameCallbacks.Communicator
    T3.GameCallbacks.Console
    T3.GameCallbacks.Control
    T3.GameCallbacks.Finalizer
    T3.GameCallbacks.HasActions
    T3.GameCallbacks.HasTimeoutLimit
    T3.GameCallbacks.Milliseconds
    T3.GameCallbacks.Monad
    T3.GameCallbacks.OnTimeout
    T3.GameCallbacks.Stoppable
    T3.GameCallbacks.Transmitter
    T3.GameCallbacks.Types
  default-extensions:
    OverloadedStrings
    MultiParamTypeClasses
    TypeFamilies
    GeneralizedNewtypeDeriving
    FlexibleContexts
    FlexibleInstances
    EmptyDataDecls
    TupleSections
    LambdaCase
  build-depends:
      base >= 4 && < 5
    , aeson
    , async-dejafu
    , dejafu
    , mtl
    , stm
    , text
    , transformers
    , t3-core
    , t3-game
    , transformers-base
  default-language:
    Haskell2010
