name: t3-game-console
version: 3.0.0
synopsis: tic-tac-toe
description: Please see README.md
homepage: http://github.com/jxv/t3#readme
license: BSD3
license-file: LICENSE
author: Joe Vargas
maintainer: http://github.com/jxv
copyright: 2016 Joe Vargas
category: Game
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs:
    src
  exposed-modules:
    T3.GameConsole.System
    T3.GameConsole.Console
    T3.GameConsole.ConsoleImpl
    T3.GameConsole.BoardManagerImpl
    T3.GameConsole.GameImpl
  build-depends:
      base >= 4.7 && < 5
    , mtl
    , safe
    , containers
    , t3-core
    , t3-game
  default-language:
    Haskell2010
  default-extensions:
    MultiParamTypeClasses
    TypeFamilies
    GeneralizedNewtypeDeriving
    FlexibleContexts
    FlexibleInstances
    EmptyDataDecls
    TupleSections
    LambdaCase
    ScopedTypeVariables

test-suite t3-game-test
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Spec.hs
  build-depends:
      base
    , t3-core
    , t3-game
    , t3-game-console
    , hspec
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  default-language:
    Haskell2010

source-repository head
  type:
    git
  location:
    https://github.com/jxv/t3
