name: t3-game-impl
synopsis: tic-tac-toe game interfacing through callbacks
description:  Please see README.md
version: 0.1.0
cabal-version: >= 1.10
build-type: Simple
license: BSD3
license-file: LICENSE
author: Joe Vargas
maintainer: http://github.com/jxv
copyright: 2016 Joe Vargas
category: Game

library
  hs-source-dirs:
    src
  exposed-modules:
    T3.GameImpl.System
    T3.GameImpl.Types
    T3.GameImpl.Parts
    T3.GameImpl.Milliseconds
    T3.GameImpl.ControlImpl
    T3.GameImpl.BoardManagerImpl
    T3.GameImpl.CommunicatorImpl
    T3.GameImpl.ConsoleImpl
  default-extensions:
    OverloadedStrings
    MultiParamTypeClasses
    TypeFamilies
    GeneralizedNewtypeDeriving
    FlexibleContexts
    FlexibleInstances
    EmptyDataDecls
    TupleSections
    LambdaCase
  build-depends:
      base >= 4 && < 5
    , aeson
    , async-dejafu
    , dejafu
    , mtl
    , stm
    , text
    , transformers
    , t3-core
    , t3-game
  default-language:
    Haskell2010
