name: t3-game
version: 3.0.0
synopsis: tic-tac-toe
description: Please see README.md
homepage: http://github.com/jxv/t3#readme
license: BSD3
license-file: LICENSE
author: Joe Vargas
maintainer: http://github.com/jxv
copyright: 2016 Joe Vargas
category: Game
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs:
    src
  exposed-modules:
    T3.Game.Parts
    T3.Game.BoardManagerImpl
    T3.Game.CommunicatorImpl
    T3.Game.ControlImpl
    T3.Game.Run
    T3.Game.System
    T3.Game.Types
  build-depends:
      base >= 4.7 && < 5
    , aeson
    , text
    , bytestring
    , mtl
    , containers
    , safe
    , vector
    , MonadRandom
    , t3-core
  default-language:
    Haskell2010
  default-extensions:
    OverloadedStrings
    GeneralizedNewtypeDeriving

test-suite t3-game-test
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Spec.hs
  build-depends:
      base
    , t3-core
    , t3-game
    , hspec
    , aeson
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  default-language:
    Haskell2010

source-repository head
  type:
    git
  location:
    https://github.com/jxv/t3
