name: t3-match
synopsis: tic-tac-toe match
description:  Please see README.md
version: 0.1.0
cabal-version: >= 1.10
build-type: Simple
license: BSD3
license-file: LICENSE
author: Joe Vargas
maintainer: http://github.com/jxv
copyright: 2016 Joe Vargas
category: Game

library
  hs-source-dirs:
    src
  exposed-modules:
    T3.Match
    T3.Match.Types
    T3.Match.HasMatchState
    T3.Match.HasConnection
    T3.Match.HasCallbacks
    T3.Match.Connection
    T3.Match.Milliseconds
    T3.Match.GameImpl
    T3.Match.GameComm
    T3.Match.GameCommImpl
    T3.Match.Console
    T3.Match.ConsoleImpl
    T3.Match.MatchInfo
    T3.Match.MatchLogger
    T3.Match.MatchLoggerImpl
    T3.Match.MatchTransmitter
    T3.Match.MatchTransmitterImpl
    T3.Match.ConnectionCallback
    T3.Match.ConnectionCallbackImpl
    T3.Match.OnTimeout
    T3.Match.HasTimeoutLimit
    T3.Match.Stoppable
  default-extensions:
    OverloadedStrings
    MultiParamTypeClasses
    TypeFamilies
    GeneralizedNewtypeDeriving
    FlexibleContexts
    FlexibleInstances
    EmptyDataDecls
    TupleSections
  build-depends:
      base >= 4 && < 5
    , bytestring
    , text
    , aeson
    , dejafu
    , async-dejafu
    , test-fixture
    , safe
    , unordered-containers
    , containers
    , vector
    , time
    , transformers
    , case-insensitive
    , http-types
    , wai
    , mtl
    , stm
    , random
    , hashable
    , hashmap
    , either
    , t3-game
    , random
    , MonadRandom
    , text-conversions
    , either
    , exceptions
  default-language:
    Haskell2010
