name: t3-match
synopsis: tic-tac-toe match
description:  Please see README.md
version: 0.1.0
cabal-version: >= 1.10
build-type: Simple
license: BSD3
license-file: LICENSE
author: Joe Vargas
maintainer: http://github.com/jxv
copyright: 2016 Joe Vargas
category: Game

library
  hs-source-dirs:
    src
  exposed-modules:
    T3.Match.System
    T3.Match.Types
    T3.Match.Parts
    T3.Match.Milliseconds
    T3.Match.ControlImpl
    T3.Match.BoardManagerImpl
    T3.Match.CommunicatorImpl
    T3.Match.ConsoleImpl
  default-extensions:
    OverloadedStrings
    MultiParamTypeClasses
    TypeFamilies
    GeneralizedNewtypeDeriving
    FlexibleContexts
    FlexibleInstances
    EmptyDataDecls
    TupleSections
    LambdaCase
  build-depends:
      base >= 4 && < 5
    , aeson
    , async-dejafu
    , dejafu
    , mtl
    , stm
    , text
    , transformers
    , t3-core
    , t3-game
  default-language:
    Haskell2010
