name:
  t3-server-spock
version:
  0.1.0.0
synopsis:
  T3 implemenation running on spock
description:
  Please see README.md
homepage:
  https://github.com/jxv/t3-server-spock#readme
license:
  BSD3
license-file:
  LICENSE
author:
  Joe Vargas
maintainer:
  http://github.com/jxv
copyright:
  2016 Joe Vargas
category:
  Web
build-type:
  Simple
cabal-version:
  >=1.10

executable t3-server-spock
  hs-source-dirs:
    app
  main-is:
    Main.hs
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , Spock
    , bytestring
    , aeson
    , text
    , t3-game
    , t3-server
  default-language:
    Haskell2010

source-repository head
  type:
    git
  location:
    https://github.com/jxv/t3
