name: t3-server
version: 1.0.0
synopsis: tic-tac-toe
description: Please see README.md
homepage: http://github.com/jxv/t3#readme
license: BSD3
license-file: LICENSE
author: Joe Vargas
maintainer: http://github.com/jxv
copyright: 2016 Joe Vargas
category: Game
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs:
    src
  exposed-modules:
    T3.Server.Main

    T3.Server.Types

    T3.Server.Control
    T3.Server.Start
    T3.Server.PracticeLobby
    T3.Server.Play
    T3.Server.Register
    T3.Server.Result
    T3.Server.Gen
    T3.Server.SharedCb

    T3.Server.ArenaDispatcher
    T3.Server.PracticeDispatcher
  build-depends:
      base >= 4.7 && < 5
    , aeson
    , lens
    , mtl
    , safe
    , containers
    , text
    , servant
    , servant-server
    , wai
    , warp
    , t3-core
    , t3-game
    , t3-game-callbacks
    , random
    , stm
  default-language:
    Haskell2010
  default-extensions:
    OverloadedStrings
    MultiParamTypeClasses
    NamedFieldPuns
    TypeFamilies
    GeneralizedNewtypeDeriving
    FlexibleContexts
    FlexibleInstances
    EmptyDataDecls
    TupleSections
    LambdaCase
    ScopedTypeVariables

executable t3-server-exe
  hs-source-dirs:
    app
  main-is:
    Main.hs
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , t3-core
    , t3-game
    , t3-game-callbacks
    , t3-server
  default-language:
      Haskell2010

test-suite t3-server-test
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Spec.hs
  build-depends:
      base
    , t3-core
    , t3-game
    , t3-game-callbacks
    , t3-server
    , hspec
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  default-language:
    Haskell2010

source-repository head
  type:
    git
  location:
    https://github.com/jxv/t3
